<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/comoEditText"
        android:layout_width="256dp"
        android:layout_height="33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:text="@string/como_te_llamas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comoEditText" />

    <Button
        android:id="@+id/buttonID"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginStart="142dp"
        android:onClick="buttonMeLlamoClick"
        android:text="@string/mellamo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mundoID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/mundoDesc"
        app:layout_constraintEnd_toStartOf="@+id/comoEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/munnndo" />

    <ImageView
        android:id="@+id/caballoID"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/caballos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonID"
        app:srcCompat="@drawable/caballo" />

    <Button
        android:id="@+id/converterButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:onClick="converterButton"
        android:text="@string/converter"
        app:layout_constraintBottom_toTopOf="@+id/caballoID"
        app:layout_constraintEnd_toStartOf="@+id/buttonID"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>