<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="114dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DisplayMessageActivity"
    tools:showIn="@layout/activity_display_message">

    <ImageView
        android:id="@+id/dineroViewId"
        android:layout_width="0dp"
        android:layout_height="263dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/dinero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/dinero" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/converter_activity"
        app:layout_constraintBottom_toBottomOf="@+id/dollarAmountEditText"
        app:layout_constraintBottom_toTopOf="@+id/dollarAmountEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <EditText
        android:id="@+id/dollarAmountEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/enter_amount_in_dollars"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/convertButtonId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/convertButtonId"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:onClick="convertClick"
        android:text="@string/convert"
        app:layout_constraintBottom_toTopOf="@+id/dineroViewId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>